# iio2mqtt

./: LICENSE  README.md  iio2mqtt.toml  pyproject.toml
iio2mqtt/: __init__.py  iio2mqtt.py
